
syntax = "proto3";

option go_package = "github.com/awitten1/multipaxos/rpc";

service Paxos {
    rpc ClientCommand(CommandBody) returns (CommandResponse);
    rpc Prepare(PrepareBody) returns (PromiseBody);
    rpc Accept(AcceptBody) returns (AcceptedBody);
    rpc Learn(LearnBody) returns (LearnAck);
}

message PrepareBody {
    uint64 smallestUndecidedIndex = 1;
}

message PromiseBody {
    map<uint64, string> decrees = 1;
}

message AcceptBody {
    uint64 ballotNumber = 1;
    string decree = 2;
    uint64 logIndex = 3;
}

message AcceptedBody {
    bool accepted = 1;
    string message = 2;
}

message CommandBody {
    string decree = 1;
}

message CommandResponse {
    bool committed = 1;
    string errorMessage = 2;
}

message LearnBody {
    string decree = 1;
    uint64 logIndex = 2;
}

message LearnAck {
    bool acked = 1;
}

